--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,6 +200,10 @@
             android:name=".manager.share.UmengShareEntryActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.mine.auth.AuthCenterActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
